--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Elm SPA example</title>
+        <title>Cel Animate</title>
     </head>
     <body>
         <div id="main"></div>
-        <script src="/app.js"></script>
     </body>
 </html>
